2004-10-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_labels): Add a TBOOLEAN flag to indicate whether
	labels should be clipped against the current axis limits. Labels
	generated by "set label <foo>" are never clipped; labels generated by 
	'plot with labels' are clipped.

2004-10-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (apply_zoom): Fix for reversed y-range in zoom by mouse
	and "set view map".

	* src/graphics.c (do_plot): Better warning for trying to use pm3d in a
	2d plot.

2004-10-08  Petr Tobiska <tobiska@ure.cas.cz>

	* term/metapost.trm (MP_arrow): Handle double-ended arrows also.

2004-10-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (pr_font): Release previous font every time a new one
	is requested. This feels wrong to me since we know the old font will be
	used again very soon, but otherwise there is a serious memory leak.

	* src/gplt_x11.c (PaletteMake): (Daniel Sebald <daniel.sebald@ieee.org>)
	Fix another tiny memory leak.

	* src/plot3d.c (get_3ddata): Add missing #ifdef EAM_DATASTRINGS.

	* configure.in: If --disable-datastrings is selected, then turn off 
	histogram support also since it is crippled without the 
	datastrings code.

2004-10-05  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.cyg config/config.mgw config/config.os2: Added #defines
	EAM_DATASTRINGS and EAM_HISTOGRAMS.

	* src/makefile.all: Added breaders.$(O) to COREOBJS.

2004-10-04  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_graphics): Initialize font-tracking variable at the
	start of each plot (fixes problems seen with opening multiple plot 
	windows with different default fonts).

2004-10-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/gplt_x11.c (process_event): Added missing cmd_tried = 1.

2004-10-03  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/gplt_x11.c (delete_plot): Fix small memory leak.

2004-10-01  Ethan Merritt  <merritt@u.washington.edu>
