@@ -5,6 +5,9 @@
 	generated by "set label <foo>" are never clipped; labels generated by 
 	'plot with labels' are clipped.
 
+	* src/graphics.c (fill_between): Improve clipping to handle 1st/2nd axes
+	and inverted axis range.
+
 2004-10-11  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* src/mouse.c (apply_zoom): Fix for reversed y-range in zoom by mouse
